axum-enumroutes/tests/ui/fail_root_attr_invalid_syntax.stderr
error: expected identifier
  --> tests/ui/fail_root_attr_invalid_syntax.rs:11:10
   |
11 | #[routes(,)]
   |          ^
